# pd-seminars

./: .gitmodules
task-1/: CMakeLists.txt  main.cpp
